Security: Remove exposed API key and internal documentation
- Replaced hardcoded Google API key with placeholder in verify-google-maps-api.html
- Removed internal implementation documentation (.md files)
- Updated .gitignore to prevent future commits of internal docs
- Kept only README.md and convex/README.md as public documentation

--- a/scripts/verify-google-maps-api.html
+++ b/scripts/verify-google-maps-api.html
@@ -51,7 +51,7 @@
 
     <script>
         // Replace this with your actual API key
-        const API_KEY = 'AIzaSyDc27COWLkqsCHxNONVo2P4u2g2laA2asQ';
+        const API_KEY = 'YOUR_API_KEY_HERE';
         const resultsDiv = document.getElementById('results');
 
         function addResult(message, type = 'info') {
